Fixed the overflow x

--- a/src/styles/singlepost.module.css
+++ b/src/styles/singlepost.module.css
@@ -15,12 +15,6 @@
   border-radius: 10px;
 }
 
-/* .metadata {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-} */
-
 .badge {
   width: 1.8rem;
   height: 1.8rem;
@@ -29,7 +23,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0.25rem;
+  margin: 0.2rem 0 0 0.2rem;
   color: white;
 }
 
@@ -39,10 +33,6 @@
   align-items: center;
   margin-bottom: 0.8rem;
 }
-
-/* .metadataInfo > .bookmarkIcon {
-  margin: 12px 15px 8px;
-} */
 
 .mainContent {
   margin-bottom: 1rem;
@@ -105,10 +95,6 @@
 @media screen and (max-width: 650px) {
   .singlePost {
     padding: 0 1rem;
-  }
-
-  .bookmarkIcon {
-    margin: 2px 10px 8px;
   }
 
   .post_inner pre {
